<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:background="@drawable/fsu2"
    tools:context=".onePlayer">
    


    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/player_one"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/player_comp"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="0 : 0"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
/>

    <ImageButton
        android:id="@+id/topLeftButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="50dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/topMiddleButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/topLeftButton" />

    <ImageButton
        android:id="@+id/topRightButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/topMiddleButton" />

    <ImageButton
        android:id="@+id/middleLeftButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/topLeftButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/middleMiddleButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/topMiddleButton"
        app:layout_constraintStart_toEndOf="@id/middleLeftButton"/>

    <ImageButton
        android:id="@+id/middleRightButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/topRightButton"
        app:layout_constraintStart_toEndOf="@id/middleMiddleButton" />

    <ImageButton
        android:id="@+id/bottomLeftButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/middleLeftButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/bottomMiddleButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/middleMiddleButton"
        app:layout_constraintStart_toEndOf="@id/bottomLeftButton" />

    <ImageButton
        android:id="@+id/bottomRightButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="215dp"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintTop_toBottomOf="@id/middleRightButton"
        app:layout_constraintStart_toEndOf="@id/bottomMiddleButton" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@id/bottomMiddleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/home"
        app:layout_constraintTop_toBottomOf="@id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>